force-app/main/default/objects/Initial_Fliers__c/Initial_Fliers__c.object-meta.xml
<CustomObject>
    <label>Initial Flier</label>
    <nameField>
        <displayFormat>IF-{0}</displayFormat>
        <label>Initial Flier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initial Fliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>