force-app/main/default/objects/Initial_Fliers__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <label>Arrival Airport</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>