force-app/main/default/objects/Initial_Fliers__c/fields/Departing_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departing_Airport__c</fullName>
    <label>Departing Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>