force-app/main/default/objects/Initial_Fliers__c/fields/Frequent_Flier_Number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flier_Number__c</fullName>
    <label>Frequent Flier Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>