force-app/main/default/objects/Initial_Fliers__c/fields/Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Type__c</fullName>
    <label>Inquiry Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancel Flight</fullName>
            </value>
            <value>
                <fullName>Flight Deal</fullName>
            </value>
            <value>
                <fullName>Flight Status</fullName>
            </value>
            <value>
                <fullName>New Flight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>