force-app/main/default/objects/Initial_Fliers__c/fields/Lounge_Used__c.field-meta.xml
<CustomField>
    <fullName>Lounge_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lounge Used?</label>
    <type>Checkbox</type>
</CustomField>