force-app/main/default/objects/Initial_Fliers__c/fields/Most_Recent_Flight__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Flight__c</fullName>
    <label>Most Recent Flight #</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>