force-app/main/default/objects/Initial_Fliers__c/fields/of_Included_Checked_Bags__c.field-meta.xml
<CustomField>
    <fullName>of_Included_Checked_Bags__c</fullName>
    <label># of Included Checked Bags</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>