force-app/main/default/objects/Initial_Fliers__c/fields/Record_Creation__c.field-meta.xml
<CustomField>
    <fullName>Record_Creation__c</fullName>
    <label>Record Creation</label>
    <required>true</required>
    <type>Date</type>
</CustomField>