force-app/main/default/objects/Initial_Fliers__c/fields/Total_of_Checked_Bags__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Checked_Bags__c</fullName>
    <label>Total # of Checked Bags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>